font size and column spacing fix

--- a/src/components/LandingPage/LandingPageStyles.scss
+++ b/src/components/LandingPage/LandingPageStyles.scss
@@ -137,7 +137,8 @@ a.nasa_logo {
 }
 
 .right {
-    width: 20%;
+    width: 25%;
+    margin-left: -12%;
 
     .section_body:first-of-type {
         margin-bottom: 20px;
@@ -151,6 +152,8 @@ a.nasa_logo {
 .section_body {
     white-space: normal;
     margin-bottom: 20px;
+    font-size: 1.6rem;
+    line-height: 1.4rem;
 }
 
 .footer {
